--- a/package.json
+++ b/package.json
@@ -6,10 +6,29 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "npm run lint:js && npm run lint:prettier",
+    "lint:fix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.0"
+    "@nuxt/devtools": "0.8.4",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "nuxt": "^3.7.0",
+    "prettier": "^3.0.3"
+  },
+  "dependencies": {
+    "@nuxt/ui": "^2.8.1",
+    "markdown-it": "^13.0.1",
+    "octokit": "^3.1.0",
+    "openai": "^4.3.0",
+    "vue-markdown-render": "^2.0.1",
+    "yup": "^1.2.0"
   }
 }
